[package]
name = "gh-flow"
version = "0.3.0"
edition = "2021"
authors = ["Say"]
description = "GitHub CLI extension for managing stacked PRs"
license = "MIT"

[[bin]]
name = "gh-flow"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
indicatif = "0.17"
dialoguer = "0.11"
console = "0.15"
